--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,13 @@ django-allauth = "*"
 django-compressor = "*"
 django-environ = "*"
 "psycopg2-binary" = "*"
-black = "*"
+pylint = "*"
+black = "==18.6b4"
 
 [dev-packages]
+"flake8" = "*"
+mypy = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.6"
