--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,14 @@ pillow = "*"
 "flake8" = "*"
 mypy = "*"
 pylint = "*"
+icecream = "*"
+ipdb = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-django = "*"
+pytest-sugar = "*"
+pytest-faker = "*"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.6"
