Add city/state/country to profile; script to populate dev users

--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ pytest-django = "*"
 pytest-sugar = "*"
 pytest-faker = "*"
 django-debug-toolbar = "*"
+factory-boy = "*"
 
 [requires]
 python_version = "3.6"
