--- a/ap/static/package.json
+++ b/ap/static/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.0",
     "bootstrap": "^4.1.3",
+    "bootstrap-datetimepicker": "0.0.7",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "simple-line-icons": "^2.4.1"
   }
